# hermes

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: evaluator.rs  main.rs
