[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
phf = { version = "0.11.1", features = ["macros"] }
nohash-hasher = "0.2.0"