[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
fnv = "1.0.7"
log = "0.4.17"
nohash-hasher = "0.2.0"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
